[gd_scene load_steps=6 format=3 uid="uid://cn5tj1wgy35ds"]

[ext_resource type="Script" path="res://scenes/Player/player.gd" id="1_hn77k"]
[ext_resource type="Texture2D" uid="uid://wqtaw6hrwxn7" path="res://graphics/player/player.png" id="2_ln8yy"]
[ext_resource type="Texture2D" uid="uid://baxxy44s7awxq" path="res://graphics/lights/circle.png" id="3_urjfg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7t4rr"]
radius = 63.0317

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_txneq"]
polygon = PackedVector2Array(-58.3333, -28.3333, -48.3333, -43.3333, -33.3333, -46.6667, -28.3333, -48.3333, -16.6667, -56.6667, -6.66667, -58.3333, 3.33333, -60, 18.3333, -61.6667, 26.6667, -58.3333, 31.6667, -50, 40, -41.6667, 45, -31.6667, 55, -26.6667, 73.3333, -11.6667, 81.6667, -11.6667, 93.3333, -6.66667, 103.333, -3.33333, 110, 0, 120, 1.66667, 120, 6.66667, 125, 6.66667, 130, 10, 130, 23.3333, 126.667, 31.6667, 121.667, 30, 118.333, 30, 120, 35, 110, 36.6667, 108.333, 31.6667, 101.667, 41.6667, 95, 43.3333, 93.3333, 50, 88.3333, 53.3333, 63.3333, 53.3333, 56.6667, 48.3333, 56.6667, 43.3333, 53.3333, 40, 41.6667, 40, 31.6667, 45, 18.3333, 48.3333, 11.6667, 51.6667, -1.66667, 58.3333, -18.3333, 60, -30, 58.3333, -35, 51.6667, -40, 45, -45, 33.3333, -53.3333, 23.3333, -51.6667, 18.3333, -56.6667, 13.3333, -60, 3.33333, -61.6667, -5, -61.6667, -16.6667)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.6, 0.6)
script = ExtResource("1_hn77k")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(35, 0)
rotation = 1.5708
texture = ExtResource("2_ln8yy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7t4rr")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="LaserMarker" type="Marker2D" parent="."]
position = Vector2(131, 19)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_txneq")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.7
texture = ExtResource("3_urjfg")
texture_scale = 0.7

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
